Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -568,8 +568,9 @@
         <div class="printable-flyer-footer">
             <div class="printable-flyer-footer-left">
                 <h4>📍 Onde Entregar:</h4>
-                <p>Rua da Esperança, 123 - Centro</p>
-                <p class="small-text">(Ao lado da Padaria do Sr. João)</p>
+                <p>Assembleia de Deus Ministério Jardim Redentor</p>
+                <p>Av. Automóvel Clube, Lote 15, Quadra 27 - Glaucia,</p>
+                <p class="small-text">(Belford Roxo - RJ, 26196-030)</p>
                 
                 <h4 class="contact-header">📞 WhatsApp / Pix:</h4>
                 <p class="phone">(21) 97743-0152</p>
@@ -718,3 +719,4 @@
     </script>
 </body>
 </html>
+
